--- a/server/Pipfile
+++ b/server/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 requests = "*"
+django = "*"
+djangorestframework = "*"
+selenium = "*"
 
 [requires]
 python_version = "3.8"
